@@ -274,13 +274,6 @@ ICEDTEA_BOOT_PATCHES =
 ICEDTEA_BOOT_PATCHES += $(DISTRIBUTION_BOOT_PATCHES)
 
 # OpenJDK build environment.
-if ZERO_BUILD
-  ICEDTEA_ZERO_BUILD = true
-endif
-if SHARK_BUILD
-  ICEDTEA_SHARK_BUILD = true
-endif
-
 ICEDTEA_NAME = IcedTea
 if HAS_ICEDTEA_REVISION
 ICEDTEA_REV = +${ICEDTEA_REVISION}
@@ -351,13 +344,21 @@ ICEDTEA_CONFIGURE += \
 	--with-giflib=bundled
 endif
 
+if ZERO_BUILD
+ICEDTEA_CONFIGURE += \
+	--with-jvm-variants=zero
+endif
+
+if SHARK_BUILD
+ICEDTEA_CONFIGURE += \
+	--with-jvm-variants=zeroshark
+endif
+
 ICEDTEA_ENV = \
 	LANG="C" \
 	PATH="$(BOOT_DIR)/bin:$(OS_PATH):$$PATH" \
 	CLASSPATH="" \
 	LD_LIBRARY_PATH="" \
-	ZERO_BUILD="$(ICEDTEA_ZERO_BUILD)" \
-	SHARK_BUILD="$(ICEDTEA_SHARK_BUILD)" \
 	ZERO_LIBARCH="$(ZERO_LIBARCH)" \
 	ARCH_DATA_MODEL="$(ZERO_BITSPERWORD)" \
 	ZERO_ENDIANNESS="$(ZERO_ENDIANNESS)" \
